src/objects/Checklist_Item__c.object
<CustomObject>
    <description>Object for creation of Checklist items linked to an event</description>
    <fields>
        <fullName>Checklist_Start_Date__c</fullName>
        <formula>Template_Event__r.Checklist_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checklist Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist</label>
        <referenceTo>Checklist__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Becomes Comments on the Task</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>Checklist_Start_Date__c + Lag_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lag_Days__c</fullName>
        <description>Used to generate Due Date of tasks</description>
        <inlineHelpText>Number of days after Checklist start date that task will be due</inlineHelpText>
        <label>Lag Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>This will become the task Subject</inlineHelpText>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Event</label>
        <referenceTo>Template_Event__c</referenceTo>
        <relationshipLabel>Checklist Items</relationshipLabel>
        <relationshipName>Checklist_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Checklist Item</label>
    <nameField>
        <displayFormat>CI-{0000000}</displayFormat>
        <label>Checklist Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>